--- a/projeto_3/index.html
+++ b/projeto_3/index.html
@@ -42,7 +42,11 @@
 
       
       <h1>Notifications</h1>
+      <h3>SSE Established</h3>
+      <p id="sse">No</p>
+      <input type="button" value="Conectar" onclick="connect()" />
       <div id="data"></div>
+
     </div>
   </body>
 </html>
